# Tree-of-Life

./: Cargo.toml  QUANTUM-SYNTHESIS-CONSTRAINTS.aln  TREETOKENS.md  infographic.html  tree-of-life.ledger
aln/: nature-fairness-colonization.aln
aln/particles/: neuromorph_row_composition.aln
beast_plague_doctrine/: Cargo.toml  README.md
beast_plague_doctrine/src/: lib.rs
crates/auto_church/src/: lib.rs
crates/auto_church_tree_integrator/src/: lib.rs
doc/: treeoflife-declaration.md
docs/: Here is the concrete, non-reversal–aligned kernel.md  README.md  The Right-to-Exist Corridor_ A Technical Specifica.md  treeoflife-declaration.md
docs/tree_of_life/: TreeofLife.md  basic-assets.md
ln/particles/: policyneuromorph-reversal.aln
microsociety_vocab/src/: vocabulary_band.rs
neuroprint-core/src/: lib.rs  neuroprint.rs
policy-engine/src/: biophysical_consensus.rs
policy_engine/src/: right_to_exist_corridor.rs
policyengine/src/: aln_roles.rs  reversalconditions.rs
qpudata/shards/: tree-of-life-2026v1.tolnp.aln
qpudatashards/particles/: CeimPhoenixWaterNodes2026v1.csv  CyboquaticPhoenixEcosafety2026v1.csv
src/: deeds.rs  lib.rs  main.rs  spectral.rs  tokens.rs
src/ceim/: CeimKernel.hpp
src/examples/: phoenix_power_nano.rs
src/ledger/: account.rs  deed_event.rs  mod.rs
src/quantum/: constraints.rs
src/simulation/: agent.rs  mod.rs  society.rs
src/societal/: api.rs  engine.rs  metrics.rs  model.rs  word_math.rs
src/tree_of_life/: TreeofLife.rs
src/utils/: crypto.rs  mod.rs  rand_events.rs  time.rs
tests/: simulation_tests.rs
(+8 files in other folders)
