[package]
name = "microsociety_tree_of_life"
version = "0.1.0"
edition = "2021"
description = "Non-actuating 1D MicroSociety sandbox with Tree-of-Life-style assets and a hash-linked observer ledger."
authors = ["Neuromorph-GOD <auto_church@tree-of-life.org>"]
license = "MIT"
repository = "https://github.com/Doctor0Evil/Tree-of-Life"
keywords = ["simulation", "microsociety", "rights", "ecology", "ethics"]
categories = ["simulation", "science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
chrono = "0.4"
thiserror = "1.0"
rand = "0.8"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
